arreglos nav y seccion values

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <!-- Inicio navbar -->
-	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+	<nav class="navbar navbar-default navbar-fixed-top" role="navigation" id="navegadorId">
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle" data-toggle="collapse"
 			data-target=".navbar-ex1-collapse">
@@ -51,9 +51,73 @@
 			</div>
 		</div>
 	</header>
-
-	<section>
-		
+<!-- Our Values -->
+	<section class="values">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+					<h2>OUR VALUES</h2>
+					<div class="lines">
+						<div class="first-line"></div>
+						<div class="second-line"></div>
+					</div>
+					<p>We create flavorsome, traditional dishes using fresh, local ingredientes.</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="values">
+					<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+						<div class="col-md-4 col-lg-4 icon">
+							<i class="fa fa-shopping-cart" aria-hidden="true"></i>
+						</div>
+						<div class="col-md-8 col-lg-8">		
+							<h4>INGREDIENTS</h4>
+							<ul>
+								<li>Fresh, local ingredients</li>
+								<li>All natural and organic</li>
+								<li>Carefully hand selected</li>
+								<li>Tested for quality and taste</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			
+				<div class="values">
+					<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+						<div class="col-md-4 col-lg-4 icon">
+							<i class="fa fa-cutlery" aria-hidden="true"></i>
+						</div>
+						<div class="col-md-8 col-lg-8">		
+							<h4>TECHNIQUE</h4>
+							<ul>
+								<li>Traditional preparation</li>
+								<li>Classic combinations</li>
+								<li>Complex flavor profiles</li>
+								<li>Hygenic and sanitary</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			
+				<div class="values">
+					<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+						<div class="col-md-4 col-lg-4 icon">
+							<i class="fa fa-users" aria-hidden="true"></i>
+						</div>
+						<div class="col-md-8 col-lg-8">		
+							<h4>COMMUNITY</h4>
+							<ul>
+								<li>Bakery reward program</li>
+								<li>Private events</li>
+								<li>Personal catering menus</li>
+								<li>Nightly community specials</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+<!-- section meet -->		
 	</section>
 
 	<section>
@@ -68,5 +132,6 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<!-- Bootstrap Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script src="assets/js/main.js"></script>
 </body>
 </html>
