section value y section meet

--- a/index.html
+++ b/index.html
@@ -14,124 +14,131 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-<!-- Inicio navbar -->
+	<!-- Inicio navbar -->
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation" id="navegadorId">
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle" data-toggle="collapse"
 			data-target=".navbar-ex1-collapse">
-				<span class="sr-only">Desplegar navegación</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-			<a class="navbar-brand img-responsive" href="#"><img src="assets/img/logo.png" alt=""></a>
-		</div>
-		<div class="collapse navbar-collapse navbar-ex1-collapse">
-			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#">Values</a></li>
-				<li><a href="#">People</a></li>
-				<li><a href="#">Press</a></li>
-				<li><a href="#">Hours</a></li>
-				<li><a href="#">Menu</a></li> 
-			</ul>
-		</div>
-	</nav>
+			<span class="sr-only">Desplegar navegación</span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		</button>
+		<a class="navbar-brand logo img-responsive" href="#"><img src="assets/img/logo.png" alt=""></a>
+	</div>
+	<div class="collapse navbar-collapse navbar-ex1-collapse">
+		<ul class="nav navbar-nav navbar-right">
+			<li><a href="#">Values</a></li>
+			<li><a href="#">People</a></li>
+			<li><a href="#">Press</a></li>
+			<li><a href="#">Hours</a></li>
+			<li><a href="#">Menu</a></li> 
+		</ul>
+	</div>
+</nav>
 <!-- Inicio header -->
-	<header>
-		<div class="container">
-			<div class="row">
-				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-					<img src="assets/img/profile.png" alt="logo">
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-xs-12 col-md-12">
-					<i class="fa fa-chevron-down" aria-hidden="true"></i>
-				</div>
+<header>
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+				<img src="assets/img/profile.png" alt="logo">
 			</div>
 		</div>
-	</header>
+		<div class="row">
+			<div class="col-xs-12 col-md-12">
+				<i class="fa fa-chevron-down" aria-hidden="true"></i>
+			</div>
+		</div>
+	</div>
+</header>
 <!-- Our Values -->
-	<section class="values">
-		<div class="container">
-			<div class="row">
-				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-					<h2>OUR VALUES</h2>
-					<div class="lines">
-						<div class="first-line"></div>
-						<div class="second-line"></div>
+<section class="values">
+	<div class="container val">
+		<div class="row">
+			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+				<h1>OUR VALUES</h1>
+				<hr class="lines">
+				<p>We create flavorsome, traditional dishes using fresh, local ingredientes.</p>
+			</div>
+		</div>
+		<div class="row info-section">
+			<div class="values">
+				<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+					<div class="col-md-4 col-lg-4 icon">
+						<i class="fa fa-shopping-cart" aria-hidden="true"></i>
 					</div>
-					<p>We create flavorsome, traditional dishes using fresh, local ingredientes.</p>
+					<div class="col-md-8 col-lg-8">		
+						<h4>INGREDIENTS</h4>
+						<ul>
+							<li>Fresh, local ingredients</li>
+							<li>All natural and organic</li>
+							<li>Carefully hand selected</li>
+							<li>Tested for quality and taste</li>
+						</ul>
+					</div>
 				</div>
 			</div>
-			<div class="row">
-				<div class="values">
-					<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-						<div class="col-md-4 col-lg-4 icon">
-							<i class="fa fa-shopping-cart" aria-hidden="true"></i>
-						</div>
-						<div class="col-md-8 col-lg-8">		
-							<h4>INGREDIENTS</h4>
-							<ul>
-								<li>Fresh, local ingredients</li>
-								<li>All natural and organic</li>
-								<li>Carefully hand selected</li>
-								<li>Tested for quality and taste</li>
-							</ul>
-						</div>
+			
+			<div class="values">
+				<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+					<div class="col-md-4 col-lg-4 icon">
+						<i class="fa fa-cutlery" aria-hidden="true"></i>
+					</div>
+					<div class="col-md-8 col-lg-8">		
+						<h4>TECHNIQUE</h4>
+						<ul>
+							<li>Traditional preparation</li>
+							<li>Classic combinations</li>
+							<li>Complex flavor profiles</li>
+							<li>Hygenic and sanitary</li>
+						</ul>
 					</div>
 				</div>
+			</div>
 			
-				<div class="values">
-					<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-						<div class="col-md-4 col-lg-4 icon">
-							<i class="fa fa-cutlery" aria-hidden="true"></i>
-						</div>
-						<div class="col-md-8 col-lg-8">		
-							<h4>TECHNIQUE</h4>
-							<ul>
-								<li>Traditional preparation</li>
-								<li>Classic combinations</li>
-								<li>Complex flavor profiles</li>
-								<li>Hygenic and sanitary</li>
-							</ul>
-						</div>
+			<div class="values">
+				<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+					<div class="col-md-4 col-lg-4 icon">
+						<i class="fa fa-users" aria-hidden="true"></i>
 					</div>
-				</div>
-			
-				<div class="values">
-					<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-						<div class="col-md-4 col-lg-4 icon">
-							<i class="fa fa-users" aria-hidden="true"></i>
-						</div>
-						<div class="col-md-8 col-lg-8">		
-							<h4>COMMUNITY</h4>
-							<ul>
-								<li>Bakery reward program</li>
-								<li>Private events</li>
-								<li>Personal catering menus</li>
-								<li>Nightly community specials</li>
-							</ul>
-						</div>
+					<div class="col-md-8 col-lg-8">		
+						<h4>COMMUNITY</h4>
+						<ul>
+							<li>Bakery reward program</li>
+							<li>Private events</li>
+							<li>Personal catering menus</li>
+							<li>Nightly community specials</li>
+						</ul>
 					</div>
 				</div>
 			</div>
 		</div>
-<!-- section meet -->		
+	</div>
+	<!-- section meet -->		
+	<section class="meet">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-offset-2 col-lg-8 col-lg-offset-2 center">
+					<h2 class="title-meet">Truly great food is a combination of quality ingredients, creativity, and attention to detail.</h2>
+					<hr class="lines">
+					<button class="btn btn-primary btn-meet" type="button">
+						<span class="title-btn">MEET OUR TEAM</span> 
+					</button>
+				</div>
+			</div>
+		</div>
 	</section>
 
-	<section>
-		
-	</section>
+</section>
 
-	<section>
-		
-	</section>
+<section>
 
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<!-- Bootstrap Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<script src="assets/js/main.js"></script>
+</section>
+
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<!-- Bootstrap Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="assets/js/main.js"></script>
 </body>
 </html>
