--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-	<!-- Inicio navbar -->
-	<nav class="navbar navbar-default navbar-fixed-top" role="navigation" id="navegadorId">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle" data-toggle="collapse"
+<!-- Inicio navbar -->
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation" id="navegadorId">
+	<div class="navbar-header">
+		<button type="button" class="navbar-toggle" data-toggle="collapse"
 			data-target=".navbar-ex1-collapse">
 			<span class="sr-only">Desplegar navegación</span>
 			<span class="icon-bar"></span>
@@ -56,7 +56,7 @@
 	<div class="container val">
 		<div class="row">
 			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-				<h1>OUR VALUES</h1>
+				<h1 class="title-values">OUR VALUES</h1>
 				<hr class="lines">
 				<p>We create flavorsome, traditional dishes using fresh, local ingredientes.</p>
 			</div>
@@ -68,7 +68,7 @@
 						<i class="fa fa-shopping-cart" aria-hidden="true"></i>
 					</div>
 					<div class="col-md-8 col-lg-8">		
-						<h4>INGREDIENTS</h4>
+						<h4 class="title-info">INGREDIENTS</h4>
 						<ul>
 							<li>Fresh, local ingredients</li>
 							<li>All natural and organic</li>
@@ -85,7 +85,7 @@
 						<i class="fa fa-cutlery" aria-hidden="true"></i>
 					</div>
 					<div class="col-md-8 col-lg-8">		
-						<h4>TECHNIQUE</h4>
+						<h4 class="title-info">TECHNIQUE</h4>
 						<ul>
 							<li>Traditional preparation</li>
 							<li>Classic combinations</li>
@@ -102,7 +102,7 @@
 						<i class="fa fa-users" aria-hidden="true"></i>
 					</div>
 					<div class="col-md-8 col-lg-8">		
-						<h4>COMMUNITY</h4>
+						<h4 class="title-info">COMMUNITY</h4>
 						<ul>
 							<li>Bakery reward program</li>
 							<li>Private events</li>
@@ -128,11 +128,18 @@
 			</div>
 		</div>
 	</section>
-
-</section>
-
-<section>
-
+<!-- Section people -->
+<section class="people">
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+				<h1 class="title-values">PEOPLE</h1>
+				<hr class="lines">
+				<p class="center p-people">We are a group of professionals and artisan chefs with a passion for culinary excellence.</p>
+			</div>
+				
+		</div>	
+	</div>
 </section>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
